php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #64729 PHP does not support x32.
Submitted: 2013-04-28 06:36 UTC Modified: 2013-04-30 17:00 UTC
From: kyle dot leet at gmail dot com Assigned: cataphract (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.5.0beta4 OS: Gentoo Linux
Private report: No CVE-ID: None
 [2013-04-28 06:36 UTC] kyle dot leet at gmail dot com
Description:
------------
There's some inline asm in some files for amd64 (an optimization), however there's no check for whether it's the correct architecture or not. This results in a build failure for x32 as similar defines are used. 

Expected result:
----------------
PHP should probably compile successfully, resulting in usable binaries.

Actual result:
--------------
/var/tmp/portage/dev-lang/php-5.5.0_beta4/work/sapis-build/cli/ext/standard/math.c: Assembler messages:
/var/tmp/portage/dev-lang/php-5.5.0_beta4/work/sapis-build/cli/ext/standard/math.c:628: Error: incorrect register `%esi' used with `q' suffix
/var/tmp/portage/dev-lang/php-5.5.0_beta4/work/sapis-build/cli/ext/standard/math.c:629: Error: incorrect register `%edx' used with `q' suffix
/var/tmp/portage/dev-lang/php-5.5.0_beta4/work/sapis-build/cli/ext/standard/math.c:632: Error: incorrect register `%edx' used with `q' suffix
/var/tmp/portage/dev-lang/php-5.5.0_beta4/work/sapis-build/cli/ext/standard/math.c:633: Error: incorrect register `%esi' used with `q' suffix


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-04-30 17:00 UTC] cataphract@php.net
-Assigned To: +Assigned To: cataphract
 [2013-04-30 17:42 UTC] cataphract@php.net
Automatic comment on behalf of glopes@nebm.ist.utl.pt
Revision: http://git.php.net/?p=php-src.git;a=commit;h=514afd67b651bea834bdb84b7685b48e9e56ac21
Log: Fix bug #64729: compilation failure on x32
 [2013-04-30 17:42 UTC] cataphract@php.net
-Status: Assigned +Status: Closed
 [2014-10-07 23:19 UTC] stas@php.net
Automatic comment on behalf of glopes@nebm.ist.utl.pt
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=514afd67b651bea834bdb84b7685b48e9e56ac21
Log: Fix bug #64729: compilation failure on x32
 [2014-10-07 23:30 UTC] stas@php.net
Automatic comment on behalf of glopes@nebm.ist.utl.pt
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=514afd67b651bea834bdb84b7685b48e9e56ac21
Log: Fix bug #64729: compilation failure on x32
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 21:00:02 2026 UTC