Fix bug #64729: compilation failure on x32