Zend/zend_multiply.h
@@ -35,8 +35,8 @@
 
 #define ZEND_SIGNED_MULTIPLY_LONG(a, b, lval, dval, usedval) do {	\
 	long __tmpvar; 													\
-	__asm__ ("imulq %3,%0\n"										\
-		"adcq $0,%1" 												\
+	__asm__ ("imul %3,%0\n"											\
+		"adc $0,%1" 												\
 			: "=r"(__tmpvar),"=r"(usedval) 							\
 			: "0"(a), "r"(b), "1"(0));								\
 	if (usedval) (dval) = (double) (a) * (double) (b);				\
